Update PlayerCommandDispatcher.java