@@ -6,30 +6,13 @@ import com.snazzyatoms.proshield.plots.Plot;
 import com.snazzyatoms.proshield.plots.PlotManager;
 import com.snazzyatoms.proshield.roles.ClaimRoleManager;
 import com.snazzyatoms.proshield.util.MessagesUtil;
-import org.bukkit.Bukkit;
 import org.bukkit.Chunk;
 import org.bukkit.Location;
-import org.bukkit.command.Command;
-import org.bukkit.command.CommandExecutor;
-import org.bukkit.command.CommandSender;
-import org.bukkit.command.TabCompleter;
+import org.bukkit.command.*;
 import org.bukkit.entity.Player;
 
 import java.util.*;
-import java.util.stream.Collectors;
 
-/**
- * Handles all player-facing claim commands:
- * - /claim
- * - /unclaim
- * - /trust <player> [role]
- * - /untrust <player>
- * - /roles
- * - /transfer <player>
- *
- * Consolidated dispatcher for versions 1.2.0 → 1.2.5
- * + Tab completion for /trust and /untrust.
- */
 public class PlayerCommandDispatcher implements CommandExecutor, TabCompleter {
 
     private final ProShield plugin;
@@ -51,8 +34,7 @@ public class PlayerCommandDispatcher implements CommandExecutor, TabCompleter {
             return true;
         }
 
-        String name = cmd.getName().toLowerCase(Locale.ROOT);
-        switch (name) {
+        switch (cmd.getName().toLowerCase(Locale.ROOT)) {
             case "claim" -> handleClaim(player);
             case "unclaim" -> handleUnclaim(player);
             case "trust" -> handleTrust(player, args);
@@ -64,191 +46,93 @@ public class PlayerCommandDispatcher implements CommandExecutor, TabCompleter {
         return true;
     }
 
-    /* ======================================================
-     * /claim
-     * ====================================================== */
     private void handleClaim(Player player) {
         Chunk chunk = player.getLocation().getChunk();
         if (plotManager.getPlot(chunk) != null) {
             messages.send(player, "claim.already-owned");
             return;
         }
-
         Plot plot = plotManager.createPlot(player.getUniqueId(), chunk);
         messages.send(player, "claim.success", Map.of("claim", plot.getDisplayNameSafe()));
     }
 
-    /* ======================================================
-     * /unclaim
-     * ====================================================== */
     private void handleUnclaim(Player player) {
         Location loc = player.getLocation();
         Plot plot = plotManager.getPlot(loc);
-
-        if (plot == null) {
-            messages.send(player, "error.no-claim");
-            return;
+        if (plot == null) { messages.send(player, "error.no-claim"); return; }
+        if (!plot.isOwner(player.getUniqueId()) && !roleManager.canUnclaim(player.getUniqueId(), plot.getId())) {
+            messages.send(player, "error.no-permission"); return;
         }
-
-        if (!plot.isOwner(player.getUniqueId()) &&
-            !roleManager.canUnclaim(player.getUniqueId(), plot.getId())) {
-            messages.send(player, "error.no-permission");
-            return;
-        }
-
         plotManager.removePlot(plot);
         messages.send(player, "claim.unclaimed", Map.of("claim", plot.getDisplayNameSafe()));
     }
 
-    /* ======================================================
-     * /trust <player> [role]
-     * ====================================================== */
     private void handleTrust(Player player, String[] args) {
-        if (args.length < 1) {
-            messages.send(player, "trust.usage");
-            return;
-        }
-
+        if (args.length < 1) { messages.send(player, "trust.usage"); return; }
         Location loc = player.getLocation();
         Plot plot = plotManager.getPlot(loc);
-
-        if (plot == null) {
-            messages.send(player, "error.no-claim");
-            return;
-        }
-
-        if (!plot.isOwner(player.getUniqueId())) {
-            messages.send(player, "error.not-owner");
-            return;
-        }
-
+        if (plot == null) { messages.send(player, "error.no-claim"); return; }
+        if (!plot.isOwner(player.getUniqueId())) { messages.send(player, "error.not-owner"); return; }
         String targetName = args[0];
         String role = args.length > 1 ? args[1] : "trusted";
-
         boolean success = roleManager.trustPlayer(plot, targetName, role);
-        if (success) {
-            messages.send(player, "trust.added",
-                    Map.of("player", targetName, "role", role, "claim", plot.getDisplayNameSafe()));
-        } else {
-            messages.send(player, "trust.failed", Map.of("player", targetName));
-        }
+        if (success) messages.send(player, "trust.added", Map.of("player", targetName, "role", role, "claim", plot.getDisplayNameSafe()));
+        else messages.send(player, "trust.failed", Map.of("player", targetName));
     }
 
-    /* ======================================================
-     * /untrust <player>
-     * ====================================================== */
     private void handleUntrust(Player player, String[] args) {
-        if (args.length < 1) {
-            messages.send(player, "untrust.usage");
-            return;
-        }
-
+        if (args.length < 1) { messages.send(player, "untrust.usage"); return; }
         Location loc = player.getLocation();
         Plot plot = plotManager.getPlot(loc);
-
-        if (plot == null) {
-            messages.send(player, "error.no-claim");
-            return;
-        }
-
-        if (!plot.isOwner(player.getUniqueId())) {
-            messages.send(player, "error.not-owner");
-            return;
-        }
-
+        if (plot == null) { messages.send(player, "error.no-claim"); return; }
+        if (!plot.isOwner(player.getUniqueId())) { messages.send(player, "error.not-owner"); return; }
         String targetName = args[0];
         boolean success = roleManager.untrustPlayer(plot, targetName);
-        if (success) {
-            messages.send(player, "untrust.removed",
-                    Map.of("player", targetName, "claim", plot.getDisplayNameSafe()));
-        } else {
-            messages.send(player, "untrust.not-trusted", Map.of("player", targetName));
-        }
+        if (success) messages.send(player, "untrust.removed", Map.of("player", targetName, "claim", plot.getDisplayNameSafe()));
+        else messages.send(player, "untrust.not-trusted", Map.of("player", targetName));
     }
 
-    /* ======================================================
-     * /roles
-     * ====================================================== */
     private void handleRoles(Player player) {
-        Location loc = player.getLocation();
-        Plot plot = plotManager.getPlot(loc);
-
-        if (plot == null) {
-            messages.send(player, "error.no-claim");
-            return;
-        }
-
-        if (!plot.isOwner(player.getUniqueId())) {
-            messages.send(player, "error.not-owner");
-            return;
-        }
-
+        Plot plot = plotManager.getPlot(player.getLocation());
+        if (plot == null) { messages.send(player, "error.no-claim"); return; }
+        if (!plot.isOwner(player.getUniqueId())) { messages.send(player, "error.not-owner"); return; }
         plugin.getGuiManager().openMenu(player, "roles");
     }
 
-    /* ======================================================
-     * /transfer <player>
-     * ====================================================== */
     private void handleTransfer(Player player, String[] args) {
-        if (args.length < 1) {
-            messages.send(player, "transfer.usage");
-            return;
-        }
-
-        Location loc = player.getLocation();
-        Plot plot = plotManager.getPlot(loc);
-
-        if (plot == null) {
-            messages.send(player, "error.no-claim");
-            return;
-        }
-
-        if (!plot.isOwner(player.getUniqueId())) {
-            messages.send(player, "transfer.not-owner");
-            return;
-        }
-
+        if (args.length < 1) { messages.send(player, "transfer.usage"); return; }
+        Plot plot = plotManager.getPlot(player.getLocation());
+        if (plot == null) { messages.send(player, "error.no-claim"); return; }
+        if (!plot.isOwner(player.getUniqueId())) { messages.send(player, "transfer.not-owner"); return; }
         String targetName = args[0];
         boolean success = roleManager.transferOwnership(plot, targetName);
-        if (success) {
-            messages.send(player, "transfer.success",
-                    Map.of("player", targetName, "claim", plot.getDisplayNameSafe()));
-        } else {
-            messages.send(player, "transfer.failed", Map.of("player", targetName));
-        }
+        if (success) messages.send(player, "transfer.success", Map.of("player", targetName, "claim", plot.getDisplayNameSafe()));
+        else messages.send(player, "transfer.failed", Map.of("player", targetName));
     }
 
-    /* ======================================================
-     * TAB COMPLETION
-     * ====================================================== */
+    // Tab completion for trust/untrust player names and roles
     @Override
     public List<String> onTabComplete(CommandSender sender, Command cmd, String alias, String[] args) {
-        if (!(sender instanceof Player)) return Collections.emptyList();
-
         String name = cmd.getName().toLowerCase(Locale.ROOT);
-
-        // /trust <player> [role]
         if (name.equals("trust")) {
             if (args.length == 1) {
-                return Bukkit.getOnlinePlayers().stream()
+                return org.bukkit.Bukkit.getOnlinePlayers().stream()
                         .map(Player::getName)
-                        .filter(n -> n.toLowerCase().startsWith(args[0].toLowerCase()))
-                        .collect(Collectors.toList());
+                        .filter(n -> n.toLowerCase(Locale.ROOT).startsWith(args[0].toLowerCase(Locale.ROOT)))
+                        .toList();
             } else if (args.length == 2) {
-                return roleManager.getAllRoles().stream()
-                        .filter(r -> r.toLowerCase().startsWith(args[1].toLowerCase()))
-                        .collect(Collectors.toList());
+                List<String> roles = new ArrayList<>(List.of("visitor", "trusted", "builder", "container", "moderator", "manager"));
+                if (sender.hasPermission("proshield.admin")) roles.add("owner");
+                return roles.stream()
+                        .filter(r -> r.startsWith(args[1].toLowerCase(Locale.ROOT)))
+                        .toList();
             }
-        }
-
-        // /untrust <player>
-        if (name.equals("untrust") && args.length == 1) {
-            return Bukkit.getOnlinePlayers().stream()
+        } else if (name.equals("untrust") && args.length == 1) {
+            return org.bukkit.Bukkit.getOnlinePlayers().stream()
                     .map(Player::getName)
-                    .filter(n -> n.toLowerCase().startsWith(args[0].toLowerCase()))
-                    .collect(Collectors.toList());
+                    .filter(n -> n.toLowerCase(Locale.ROOT).startsWith(args[0].toLowerCase(Locale.ROOT)))
+                    .toList();
         }
-
         return Collections.emptyList();
-    }
+        }
 }
